fix: customize default scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,14 @@ h5,
 h6 {
   overflow-wrap: break-word;
 }
+
+/* Customomize scrollbar */
+
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #bdbdbd !important;
+  border-radius: 8px;
+}
